--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,31 @@ plotly = "^5.10.0"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
 wemake-python-styleguide = "^0.17.0"
-black = "^22.10.0"
+black = {extras = ["d"], version = "^22.10.0"}
 isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+target-version = ['py310']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 120
