--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^7.1.3"
 wemake-python-styleguide = "^0.17.0"
 black = {extras = ["d"], version = "^22.10.0"}
 isort = "^5.10.1"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
