--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,10 +11,15 @@ repos:
         exclude: settings.py
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.961'
+    rev: 'v0.982'
     hooks:
       - id: mypy
-        args: [--no-strict-optional, --ignore-missing-imports, --scripts-are-modules]
+        args: [
+          --no-strict-optional,
+          --ignore-missing-imports,
+          --scripts-are-modules,
+          '--config-file=pyproject.toml',
+        ]
         exclude: tests
 
   - repo: https://github.com/pycqa/isort
@@ -29,7 +34,11 @@ repos:
       - id: black
         language_version: python3
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: '3.9.2'
+  - repo: local
     hooks:
       - id: flake8
+        name: flake8
+        description: Python style guide enforcement
+        entry: flake8
+        args: ["--config=.flake8"]
+        language: python
