--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ wemake-python-styleguide = "^0.17.0"
 black = {extras = ["d"], version = "^22.10.0"}
 isort = "^5.10.1"
 pre-commit = "^2.20.0"
+pytest-asyncio = "^0.20.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
