--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.85.1"
 pydantic = "^1.10.2"
 dash = "^2.6.2"
 plotly = "^5.10.0"
+asyncpg = "^0.26.0"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -45,7 +47,19 @@ exclude = '''
 
 [tool.isort]
 profile = "black"
-line_length = 120
+line_length = 80
+wrap_length = 79
+multi_line_output = 3
+py_version = "310"
+include_trailing_comma = true
+extend_skip = [
+    ".json",
+    ".md",
+    ".pyi",
+    ".txt",
+    ".yml"
+]
+
 
 [tool.mypy]
 python_version = '3.10'
