--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   db:
-    container_name: db
+    container_name: db_container
     image: postgres:14.3-bullseye
     env_file:
-      - .env
+      - db/postgresql/.env
     ports:
-      - 5431:5432
+      - 5430:5432
