--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "philosophyservice"
 version = "0.1.0"
 description = ""
-authors = ["Chumakov Mikhail <mikhail.ch2011@yandex.ru>"]
+authors = ["Chumakov Mikhail <i@m-chumakov-dev.ru>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,6 +14,8 @@ dash = "^2.6.2"
 plotly = "^5.10.0"
 asyncpg = "^0.26.0"
 loguru = "^0.6.0"
+toml = "^0.10.2"
+sentry-sdk = "^1.10.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -22,6 +24,10 @@ black = {extras = ["d"], version = "^22.10.0"}
 isort = "^5.10.1"
 pre-commit = "^2.20.0"
 pytest-asyncio = "^0.20.1"
+
+[tool.poetry.group.dev.dependencies]
+validators = "^0.20.0"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -59,7 +65,9 @@ extend_skip = [
     ".txt",
     ".yml"
 ]
-
+known_first_party = [
+"utils",
+]
 
 [tool.mypy]
 python_version = '3.10'
