--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3"
 services:
   db:
     container_name: db_container
@@ -6,3 +7,9 @@ services:
       - db/postgresql/.env
     ports:
       - 5430:5432
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
+    driver: local
